infra/k8s/base/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: zeeus-assessment-api
spec:
  selector:
    app: zeeus-assessment-api
  ports:
    - name: http
      port: 4000
      targetPort: http
